# barrow

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  agent.md  agents.md  claude.md  manifest.schema.json  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
architecture/: index.html
barrow/: cli.py  errors.py
barrow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
barrow/core/: __init__.py  errors.py  nodes.py  plan.py  properties.py  result.py  schema.py
barrow/execution/: __init__.py  engine.py
barrow/expr/: __init__.py  analyzer.py  compiler.py  parser.py
barrow/frontend/: __init__.py  cli_to_plan.py  sql_to_plan.py
barrow/io/: __init__.py  formats.py  options.py  reader.py  writer.py
barrow/operations/: __init__.py  _env.py  _expr_eval.py  filter.py  groupby.py  join.py  mutate.py  select.py  sort.py  sql.py  summary.py  ungroup.py  window.py
barrow/optimizer/: __init__.py  optimizer.py
docs/: architecture.md  installation.md  manual.md  usage.md
installation/: index.html
manual/: index.html
scripts/: analyze_bench.py  benchmark.sh  resource_wrapper.sh  setup_env.sh
search/: search_index.json
tests/: conftest.py  test_cli.py  test_cli_completion.py  test_cli_io_defaults.py
tests/cli/: test_view.py
tests/core/: test_nodes.py  test_plan.py  test_result.py
tests/execution/: test_arrow_backend.py  test_duckdb_backend.py  test_engine.py
tests/expr/: __init__.py  test_parse_errors.py  test_parser.py  test_placeholder.py
tests/frontend/: test_cli_to_plan.py
usage/: index.html
(+42 files in other folders)
