[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "barrow"
version = "0.1.0"
description = "A Bash tool for data manipulation using tabular formats, based on Apache Arrow."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Barrow Developers"}]
dependencies = [
    "pyarrow",
    "numpy",
    "duckdb",
]

[project.scripts]
barrow = "barrow.cli:main"

