[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "barrow"
version = "0.1.0"
description = "A Bash tool for data manipulation using tabular formats, based on Apache Arrow."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Barrow Developers"}]
dependencies = [
    "pyarrow",
    "numpy",
    "duckdb",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pre-commit",
    "ruff",
    "black",
    "mypy",
    "argcomplete",
    "commitizen",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material",
]

[project.scripts]
barrow = "barrow.cli:main"


[tool.mkdocs]
site_name = "Barrow"
docs_dir = "docs"

[[tool.mkdocs.nav]]
Installation = "installation.md"

[[tool.mkdocs.nav]]
Usage = "usage.md"

[tool.mkdocs.theme]
name = "material"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
    "barrow/__init__.py:__version__",
]
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"
